[package]
name = "EmaPNGTuberV4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
gl33 = "0.2.1"
cpal = { "version" = "0.15.2" }
ultraviolet = { version = "0.9", features = [ "f64", "int" ] }
png = "0.17.11"
sdl2 = { version = "0.36.0", features = ["ttf", "unsafe_textures", "image"] }
sdl2-sys = { version = "0.36.0" }
imgui = "0.11.0"
glow = "0.12.0"
imgui-glow-renderer = "0.11.0"